@@ -38,6 +38,7 @@ require 'active_support/ordered_options'
 require 'active_support/option_merger'
 
 require 'active_support/values/time_zone'
+require 'active_support/duration'
 
 require 'active_support/json'
 
