@@ -3,51 +3,70 @@ module ActiveSupport #:nodoc:
     module Numeric #:nodoc:
       # Enables the use of time calculations and declarations, like 45.minutes + 2.hours + 4.years.
       #
-      # If you need precise date calculations that doesn't just treat months as 30 days, then have
-      # a look at Time#advance.
+      # These methods use Time#advance for precise date calculations when using from_now, ago, etc. 
+      # as well as adding or subtracting their results from a Time object. For example:
+      #
+      #   # equivalent to Time.now.advance(:months => 1)
+      #   1.month.from_now
+      #
+      #   # equivalent to Time.now.advance(:years => 2)
+      #   2.years.from_now
+      #
+      #   # equivalent to Time.now.advance(:months => 4, :years => 5)
+      #   (4.months + 5.years).from_now
       # 
-      # Some of these methods are approximations, Ruby's core 
+      # While these methods provide precise calculation when used as in the examples above, care
+      # should be taken to note that this is not true if the result of `months', `years', etc is
+      # converted before use:
+      #
+      #   # equivalent to 30.days.to_i.from_now
+      #   1.month.to_i.from_now
+      #
+      #   # equivalent to 365.25.days.to_f.from_now
+      #   1.year.to_f.from_now
+      #
+      # In such cases, Ruby's core 
       # Date[http://stdlib.rubyonrails.org/libdoc/date/rdoc/index.html] and 
       # Time[http://stdlib.rubyonrails.org/libdoc/time/rdoc/index.html] should be used for precision
       # date and time arithmetic
       module Time
         def seconds
-          self
+          ActiveSupport::Duration.new(self, [[:seconds, self]])
         end
         alias :second :seconds
 
         def minutes
-          self * 60
+          ActiveSupport::Duration.new(self * 60, [[:seconds, self * 60]])
         end
         alias :minute :minutes  
         
         def hours
-          self * 60.minutes
+          ActiveSupport::Duration.new(self * 3600, [[:seconds, self * 3600]])
         end
         alias :hour :hours
         
         def days
-          self * 24.hours
+          ActiveSupport::Duration.new(self * 24.hours, [[:days, self]])
         end
         alias :day :days
 
         def weeks
-          self * 7.days
+          ActiveSupport::Duration.new(self * 7.days, [[:days, self * 7]])
         end
         alias :week :weeks
         
         def fortnights
-          self * 2.weeks
+          ActiveSupport::Duration.new(self * 2.weeks, [[:days, self * 14]])
         end
         alias :fortnight :fortnights
         
         def months
-          self * 30.days
+          ActiveSupport::Duration.new(self * 30.days, [[:months, self]])
         end
         alias :month :months
 
         def years
-          (self * 365.25.days).to_i
+          ActiveSupport::Duration.new(self * 365.25.days, [[:years, self]])
         end
         alias :year :years
 
