@@ -34,6 +34,53 @@ class NumericExtTimeTest < Test::Unit::TestCase
       assert seconds.from_now >= now + seconds
     end
   end
+  
+  def test_irregular_durations
+    assert_equal @now.advance(:days => 3000), 3000.days.since(@now)
+    assert_equal @now.advance(:months => 1), 1.month.since(@now)
+    assert_equal @now.advance(:months => -1), 1.month.until(@now)
+    assert_equal @now.advance(:years => 20), 20.years.since(@now)
+  end
+  
+  def test_duration_addition
+    assert_equal @now.advance(:days => 1, :months => 1), (1.day + 1.month).since(@now)
+    assert_equal @now.advance(:days => 7), (1.week + 5.seconds - 5.seconds).since(@now)
+    assert_equal @now.advance(:years => 2), (4.years - 2.years).since(@now)
+  end
+  
+  def test_time_plus_duration
+    assert_equal @now + 8, @now + 8.seconds
+    assert_equal @now + 22.9, @now + 22.9.seconds
+    assert_equal @now.advance(:days => 15), @now + 15.days
+    assert_equal @now.advance(:months => 1), @now + 1.month
+  end
+  
+  def test_chaining_duration_operations
+    assert_equal @now.advance(:days => 2, :months => -3), @now + 2.days - 3.months
+    assert_equal @now.advance(:days => 1, :months => 2), @now + 1.day + 2.months
+  end
+  
+  def test_duration_after_convertion_is_no_longer_accurate
+    assert_equal 30.days.to_i.since(@now), 1.month.to_i.since(@now)
+    assert_equal 365.25.days.to_f.since(@now), 1.year.to_f.since(@now)
+  end
+end
+
+class NumericExtDateTest < Test::Unit::TestCase
+  def setup
+    @today = Date.today
+  end
+
+  def test_date_plus_duration
+    assert_equal @today + 1, @today + 1.day
+    assert_equal @today >> 1, @today + 1.month
+    assert_raises(ArgumentError) { @today + 1.second }
+  end
+  
+  def test_chaining_duration_operations
+    assert_equal @today.advance(:days => 2, :months => -3), @today + 2.days - 3.months
+    assert_equal @today.advance(:days => 1, :months => 2), @today + 1.day + 2.months
+  end
 end
 
 class NumericExtSizeTest < Test::Unit::TestCase
