@@ -1,5 +1,7 @@
 *SVN*
 
+* Make 1.months and friends accurate by introducing a Duration class.  #6835 [eventualbuddha]
+
 * Document Inflector.ordinalize and merge docs from String inflections.  #7023 [smeade]
 
 * Unbundle flexmock.  [Jeremy Kemper]
